--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,7 +1,7 @@
 .navbar {
   display: flex;
   width: 100%;
-  height: 70px;
+  height: 90px;
   background:rgba(0,0,0,.65);
   padding:10px;
   top: 0;
@@ -9,13 +9,12 @@
   right:0;
   z-index: 1;
   align-items: center;
-  justify-content: center;;
+  justify-content: center;
   color:#fff;
 }
 
-/* .navbar__logo {
-    margin-left:20px;
-} */
+
+
 
 /* .navbar__info {
   margin-right:10px;
