--- a/src/styles/section2.css
+++ b/src/styles/section2.css
@@ -39,6 +39,7 @@
 .section2__right > p {
     margin-bottom:3px;
     padding-bottom:5px;
+    text-align: center;
 }
 
 .section2__left {
@@ -57,10 +58,16 @@
 @media screen and (max-width:700px) {
     .section2__container {
         justify-content: center;
+        flex-direction: column;
     }
 
     .section2__left {
         margin-left:0;
         margin-top:10px;
+        align-self:center;
+    }
+
+    .section2__right {
+        margin:10px auto;
     }
 }
