--- a/src/styles/section4.css
+++ b/src/styles/section4.css
@@ -2,7 +2,6 @@
   height: 100vh;
   width: 100vw;
   background-image: url('../img/nathalia-segato-v4ynva2rNVc-unsplash.jpg');
-  background-repeat: no-repeat;
   background-size: cover;
   display:flex;
   flex-direction: column;
@@ -45,11 +44,14 @@ a {
 
 @media screen and (max-width:700px) {
     .section4__container { 
-        height:60%;
-        margin-top:100px;
+        height:fit-content;
     }
 
     .section4__ss {
         width:90%;
+    }
+
+    .section4 {
+        height:60vh;
     }
 }
